2000-09-16  Asbjorn Pettersen  <asbjornP@dualog.no>

	* app/filedlg.c: add include <sys/types.h> to
	remove warning. (OS/2)

2000-09-13  Cyrille Chepelov <chepelov@calixo.net>

	* objects/chronogram/chronoline_event.c (reparse_clevent):
	the __checksum routine was simply bogus. Redone it in a slightly
	saner way (reported by Michael Farr <mfarr@cs.latrobe.edu.au>).

2000-09-10  Asbjorn Pettersen  <asbjornP@dualog.no>

	* app/create_object.c (create_object_button_press): 
	* app/modify_tool.c (click_select_object): 
	* lib/object.h: select renamed to selectf to prevent
	compiler problems with function select().  OS/2 version.

2000-09-08  Karsten Weiss  <knweiss@gmx.de>

	* po/de.po: Updated.

2000-09-07  Karsten Weiss  <knweiss@gmx.de>

	* dia.desktop: Added German translation
	* app/menus.c: "Diagram Propeties..." -> "Diagram Properties..."

2000-08-29  Manuel de Vega Barreiro <barreiro@arrakis.es>

        * configure.in (ALL_LINGUAS): added "es"

2000-08-28  Lars Clausen  <lrclause@shasta.cs.uiuc.edu>

	* app/magnify.c:
	* app/cursor.h:
	* app/cursor.c:
	* app/scroll_tool.c:
	Standardized cursor function get_cursor().  Magnify now has
	looking-glass cursor with + and -.

	* app/create_object.c (create_object_button_press): 
	Newly created connections now snap to connection points even when
	off the grid. 

2000-08-17  Daniel Egger  <egger@suse.de>

	* app/menus.c: #ifdef'ed some code for the none GNOME
	case.
	* app/dia_embedd.c: Changed obvious hackery. Can anyone
	please have a look at the GNOME UI menu creation? The
	gnome-app-helper code is ages old and plainly broken!

2000-08-15  Daniel Egger  <egger@suse.de>

	* app/commands.c:
	* app/commands.h:
	* app/diagram.c:
	* app/display.c:
	* app/menus.c:
	* app/select.c: First big patch to get the menus
	working again in the international version. Copied
	some code written by Sven and me from GIMP and
	thus implemented automatic tearoffmenu creation and
	proper translation. I also removed that pseudo